# memory-capper

./: .gitignore  LICENSE  Makefile  Makefile.am  PKGBUILD  README.md  configure  configure.ac  main.c  memory-capper.service  memory-capper.service.in  memory-capper.sh
